[gd_scene load_steps=9 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" uid="uid://dh3fyufssoe2s" path="res://algorithms/advancedlaboratory/entropy_visualization/EnhancedEntropyVisualization.gd" id="1_script"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.02, 0.02, 0.05, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.4, 0.6, 1)
ambient_light_energy = 0.4
reflected_light_source = 2
tonemap_mode = 2
glow_enabled = true
glow_intensity = 1.5
glow_bloom = 0.1
adjustment_enabled = true
adjustment_brightness = 1.1
adjustment_contrast = 1.2
adjustment_saturation = 1.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.1, 0.8, 0.3, 1)
metallic = 0.2
roughness = 0.3
emission_enabled = true
emission = Color(0.05, 0.4, 0.15, 1)
emission_energy_multiplier = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4"]
albedo_color = Color(0.1, 0.5, 0.9, 1)
metallic = 0.3
roughness = 0.2
emission_enabled = true
emission = Color(0.05, 0.25, 0.45, 1)
emission_energy_multiplier = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.9, 0.2, 0.1, 1)
metallic = 0.2
roughness = 0.3
emission_enabled = true
emission = Color(0.45, 0.1, 0.05, 1)
emission_energy_multiplier = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8"]
albedo_color = Color(0.95, 0.95, 0.95, 1)
metallic = 0.8
roughness = 0.1
emission_enabled = true
emission = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6"]
albedo_color = Color(0.8, 0.2, 0.8, 1)
metallic = 0.1
roughness = 0.4
emission_enabled = true
emission = Color(0.4, 0.1, 0.4, 1)
emission_energy_multiplier = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
transparency = 1
albedo_color = Color(0.05, 0.05, 0.15, 0.3)
metallic = 0.9
roughness = 0.1
emission_enabled = true
emission = Color(0.02, 0.02, 0.08, 1)

[node name="EnhancedEntropyVisualization" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 8, 12, 18)
environment = SubResource("Environment_1")
fov = 65.0

[node name="CameraController" type="Node3D" parent="Camera3D"]

[node name="MainLighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MainLighting"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 0.8
shadow_enabled = true

[node name="AmbientLight1" type="OmniLight3D" parent="MainLighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 8, 10)
light_color = Color(0.3, 0.6, 0.9, 1)
light_energy = 1.2
omni_range = 25.0

[node name="AmbientLight2" type="OmniLight3D" parent="MainLighting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 8, -10)
light_color = Color(0.9, 0.4, 0.2, 1)
omni_range = 20.0

[node name="SystemsContainer" type="Node3D" parent="."]

[node name="OrderedSystem" type="Node3D" parent="SystemsContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="OrderedParticles" type="Node3D" parent="SystemsContainer/OrderedSystem"]

[node name="OrderedConnections" type="Node3D" parent="SystemsContainer/OrderedSystem"]

[node name="OrderedLabel" type="Node3D" parent="SystemsContainer/OrderedSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="LabelGeometry" type="CSGBox3D" parent="SystemsContainer/OrderedSystem/OrderedLabel"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(6, 0.8, 0.3)

[node name="TransitionSystem" type="Node3D" parent="SystemsContainer"]

[node name="TransitionParticles" type="Node3D" parent="SystemsContainer/TransitionSystem"]

[node name="TransitionConnections" type="Node3D" parent="SystemsContainer/TransitionSystem"]

[node name="TransitionLabel" type="Node3D" parent="SystemsContainer/TransitionSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="LabelGeometry" type="CSGBox3D" parent="SystemsContainer/TransitionSystem/TransitionLabel"]
material_override = SubResource("StandardMaterial3D_4")
size = Vector3(6, 0.8, 0.3)

[node name="DisorderedSystem" type="Node3D" parent="SystemsContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="DisorderedParticles" type="Node3D" parent="SystemsContainer/DisorderedSystem"]

[node name="DisorderedConnections" type="Node3D" parent="SystemsContainer/DisorderedSystem"]

[node name="DisorderedLabel" type="Node3D" parent="SystemsContainer/DisorderedSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="LabelGeometry" type="CSGBox3D" parent="SystemsContainer/DisorderedSystem/DisorderedLabel"]
material_override = SubResource("StandardMaterial3D_3")
size = Vector3(6, 0.8, 0.3)

[node name="VisualizationPanels" type="Node3D" parent="."]

[node name="EntropyMeter" type="Node3D" parent="VisualizationPanels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="MeterBase" type="CSGBox3D" parent="VisualizationPanels/EntropyMeter"]
material_override = SubResource("StandardMaterial3D_8")
size = Vector3(20, 0.3, 1.5)

[node name="MeterScale" type="Node3D" parent="VisualizationPanels/EntropyMeter"]

[node name="LowEntropyMarker" type="CSGSphere3D" parent="VisualizationPanels/EntropyMeter/MeterScale"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.5, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.2

[node name="HighEntropyMarker" type="CSGSphere3D" parent="VisualizationPanels/EntropyMeter/MeterScale"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.5, 0)
material_override = SubResource("StandardMaterial3D_3")
radius = 0.2

[node name="MeterIndicator" type="CSGSphere3D" parent="VisualizationPanels/EntropyMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.8, 0)
material_override = SubResource("StandardMaterial3D_6")
radius = 0.4

[node name="InformationPanel" type="Node3D" parent="VisualizationPanels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8, 0)

[node name="PanelBase" type="CSGBox3D" parent="VisualizationPanels/InformationPanel"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(18, 3, 0.2)

[node name="EntropyGraph" type="Node3D" parent="VisualizationPanels/InformationPanel"]

[node name="GraphBackground" type="CSGBox3D" parent="VisualizationPanels/InformationPanel/EntropyGraph"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2)
material_override = SubResource("StandardMaterial3D_8")
size = Vector3(16, 2.5, 0.1)

[node name="GraphData" type="Node3D" parent="VisualizationPanels/InformationPanel/EntropyGraph"]

[node name="EnergyFlowSystem" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="EnergyFlowSystem"]

[node name="FlowField" type="Node3D" parent="EnergyFlowSystem"]

[node name="TemperatureGradient" type="Node3D" parent="EnergyFlowSystem"]

[node name="InteractiveControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ControlPanel" type="VBoxContainer" parent="InteractiveControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0

[node name="TitleLabel" type="Label" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
text = "Entropy Visualization Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InteractiveControls/ControlPanel"]
layout_mode = 2

[node name="SystemTypeLabel" type="Label" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
text = "System Type"

[node name="SystemTypeOption" type="OptionButton" parent="InteractiveControls/ControlPanel"]
layout_mode = 2

[node name="TemperatureLabel" type="Label" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
text = "Temperature: 300K"

[node name="TemperatureSlider" type="HSlider" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 300.0

[node name="ParticleCountLabel" type="Label" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
text = "Particle Count: 100"

[node name="ParticleCountSlider" type="HSlider" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
min_value = 25.0
max_value = 200.0
value = 100.0

[node name="AnimationSpeedLabel" type="Label" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
text = "Animation Speed: 1.0x"

[node name="AnimationSpeedSlider" type="HSlider" parent="InteractiveControls/ControlPanel"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="InteractiveControls/ControlPanel"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="InteractiveControls/ControlPanel"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="InteractiveControls/ControlPanel/ButtonContainer"]
layout_mode = 2
text = "Reset"

[node name="PlayPauseButton" type="Button" parent="InteractiveControls/ControlPanel/ButtonContainer"]
layout_mode = 2
text = "Pause"

[node name="RandomizeButton" type="Button" parent="InteractiveControls/ControlPanel/ButtonContainer"]
layout_mode = 2
text = "Randomize"

[node name="InfoDisplay" type="VBoxContainer" parent="InteractiveControls"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="InfoLabel" type="Label" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2
text = "Entropy Information"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2

[node name="CurrentEntropyLabel" type="Label" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2
text = "Current Entropy: 0.00"

[node name="MaxEntropyLabel" type="Label" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2
text = "Maximum Entropy: 0.00"

[node name="EntropyRateLabel" type="Label" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2
text = "Entropy Rate: 0.00/s"

[node name="SystemStateLabel" type="Label" parent="InteractiveControls/InfoDisplay"]
layout_mode = 2
text = "System State: Ordered"
